# tf-serving-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  proto_gen  search-index.js
implementors/error_chain/: trait.ChainedError.js
mnist/: index.html
src/: allocation_description.rs  attr_value.rs  classification.rs  cost_graph.rs  device_attributes.rs  example.rs  example_parser_configuration.rs  feature.rs  function.rs  get_model_metadata.rs  graph.rs  graph_transfer_info.rs  inference.rs  input.rs  kernel_def.rs  lib.rs  log_memory.rs  meta_graph.rs  model.rs  node_def.rs  op_def.rs  op_gen_overrides.rs  predict.rs  prediction_service_grpc.rs  reader_base.rs  regression.rs  remote_fused_graph_execute_info.rs  resource_handle.rs  saver.rs  step_stats.rs  summary.rs  tensor.rs  tensor_description.rs  tensor_shape.rs  tensor_slice.rs  types.rs  variable.rs  versions.rs
src/examples/: mnist.rs  mod.rs
src/mnist/: input.rs.html  main.rs.html  mnist.rs.html
src/tf_serving/: attr_value.rs.html  classification.rs.html  example.rs.html  feature.rs.html  function.rs.html  get_model_metadata.rs.html  graph.rs.html  inference.rs.html  input.rs.html  lib.rs.html  meta_graph.rs.html  model.rs.html  node_def.rs.html  op_def.rs.html  predict.rs.html  prediction_service_grpc.rs.html  regression.rs.html  resource_handle.rs.html  saver.rs.html  tensor.rs.html  tensor_shape.rs.html  types.rs.html  versions.rs.html
tf_serving/: index.html  sidebar-items.js
tf_serving/attr_value/: enum.AttrValue_oneof_value.html  fn.file_descriptor_proto.html  index.html  struct.AttrValue.html  struct.AttrValue_ListValue.html  struct.NameAttrList.html
tf_serving/classification/: ClassificationRequest.t.html  ClassificationResponse.t.html  ClassificationResult.t.html  Classifications.t.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.Class.html  struct.ClassificationRequest.html  struct.ClassificationResponse.html  struct.ClassificationResult.html  struct.Classifications.html
tf_serving/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
tf_serving/example/: SequenceExample.t.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.Example.html  struct.SequenceExample.html
tf_serving/examples/: index.html  sidebar-items.js
tf_serving/feature/: BytesList.t.html  FeatureList.t.html  FeatureLists.t.html  Feature_oneof_kind.t.html  FloatList.t.html  Int64List.t.html  enum.Feature_oneof_kind.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  (+7 more)
(+175 files in other folders)
