[package]
name = "tf-serving"
version = "0.0.1"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
error-chain = "0.11.0"
futures     = "0.1"
grpcio      = "0.1"
log         = "*"
protobuf    = { version = "1.*"    , features = ["with-bytes"] }

bytes           = { version = "0.4.5"  , optional = true }
flate2          = { version = "0.2"    , optional = true }
futures-cpupool = { version = "0.1"    , optional = true }
ndarray         = { version = "0.10.9" , optional = true }
reqwest         = { version = "0.7.3"  , optional = true }
tokio-core      = { version = "0.1"    , optional = true }

[features]
default = [ "examples", "runtime" ]
examples = [ "reqwest", "flate2", "bytes", "ndarray" ]
runtime = [ "futures-cpupool", "tokio-core" ]

[[bin]]
name = "mnist"
required-features = [ "examples", "runtime" ]