[package]
name = "tf-serving"
version = "0.0.1"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
error-chain = "0.11.0"
futures     = "0.1"
grpcio      = { version = "0.1", features = [ "link-sys" ] }
log         = "*"
protobuf    = { version = "1.*"    , features = [ "with-bytes" ] }

bytes           = { version = "0.4.5"  , optional = true }
flate2          = { version = "0.2"    , optional = true }
futures-cpupool = { version = "0.1"    , optional = true }
reqwest         = { version = "0.7.3"  , optional = true }
tokio-core      = { version = "0.1"    , optional = true }
itertools       = { version = "0.6.5"  , optional = true }
rand            = { version = "0.3"    , optional = true }

[features]
default = [ "examples", "runtime" ]
examples = [ "reqwest", "flate2", "bytes", "itertools", "rand" ]
runtime = [ "futures-cpupool", "tokio-core" ]

[[bin]]
name = "mnist"
required-features = [ "examples", "runtime" ]